--- a/app/app/static/css/style.css
+++ b/app/app/static/css/style.css
@@ -1,3 +1,7 @@
+html { 
+    overflow-y: hidden;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -54,7 +58,7 @@ video {
         width: 100%;
         height: 100%;
     }
-}
+} */
 
 #content {
     width: 100%;
