--- a/app/templates/forecast.html
+++ b/app/templates/forecast.html
@@ -16,15 +16,17 @@ content %}
 
   <body>
     <table id="tb">
-      <tr>
-        <th>TIMESTAMP</th>
-        <th>TRIP ID</th>
-        <th>ROUTE ID</th>
-        <th>LABEL</th>
-        <th>CONGESTION LV</th>
-        <th>PREDICT TIME</th>
-        <th>PROBABILITY</th>
-      </tr>
+      <thead>
+        <tr>
+          <th>TIMESTAMP</th>
+          <th>TRIP ID</th>
+          <th>ROUTE ID</th>
+          <th>LABEL</th>
+          <th>CONGESTION LV</th>
+          <th>PREDICT TIME</th>
+          <th>PROBABILITY</th>
+        </tr>
+      </thead>
     </table>
 
     <script
