AWS_Deployment_Update

--- a/app/templates/Home.html
+++ b/app/templates/Home.html
@@ -30,7 +30,6 @@
                       Visualization<br />
                       Prediction
                     </h1>
-                    <a href="/map">Open App</a>
                   </div>
                 </div>
               </div>
@@ -55,7 +54,46 @@
         </div>
       </section>
       <!-- end slider section -->
-
+<!-- url section -->
+  <section class="contact_section layout_padding">
+      <div class="container">
+        <div class="heading_container">
+          <h2>Input URL</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-8 mx-auto">
+            <div class="form_container">
+              <form method="post" action="/">
+                <div class="form-row">
+                  <div class="form-group col">
+                    <input
+                      name="static_url"
+                      type="text"
+                      class="form-control"
+                      id="static_url"
+                      placeholder="Static URl"
+                      required
+                    />
+                  </div>
+                  <div class="form-group col">
+                    <input
+                      name="realtime_url"
+                      type="text"
+                      class="form-control"
+                      id="realtime_url"
+                      placeholder="Realtime URl"
+                      required
+                    />
+                  </div>
+                </div>
+                <input class="detail_container" type="submit" value = "Open Map" input>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end url section -->
     <!-- car section -->
 
     <section class="car_section layout_padding2-top layout_padding-bottom">
